// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structure/ino-control-item Activated smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-control-item activated="true"
                          checked="false"
                          disabled="false"
                          indeterminate="false"
                          role="checkbox"
                          secondary-text
                          selected="false"
                          text="Text"
                          trailing="false"
                          class="hydrated"
        >
          <ino-list-item class="hydrated">
            <span slot
                  hidden
            >
            </span>
            <li class="mdc-deprecated-list-item mdc-deprecated-list-item--activated mdc-ripple-upgraded"
                tabindex="-1"
            >
              <span class="mdc-deprecated-list-item__ripple">
              </span>
              <span class="mdc-deprecated-list-item__graphic"
                    role="presentation"
              >
                <ino-checkbox slot="leading"
                              class="hydrated"
                >
                  <input type="hidden"
                         class="aux-input"
                         name="undefined"
                         value
                  >
                </ino-checkbox>
              </span>
              <span class="mdc-deprecated-list-item__text">
                Text
              </span>
            </li>
          </ino-list-item>
        </ino-control-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-control-item Checked smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-control-item activated="false"
                          checked="true"
                          disabled="false"
                          indeterminate="false"
                          role="checkbox"
                          secondary-text
                          selected="false"
                          text="Text"
                          trailing="false"
                          class="hydrated"
        >
          <ino-list-item class="hydrated">
            <span slot
                  hidden
            >
            </span>
            <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
                tabindex="-1"
            >
              <span class="mdc-deprecated-list-item__ripple">
              </span>
              <span class="mdc-deprecated-list-item__graphic"
                    role="presentation"
              >
                <ino-checkbox slot="leading"
                              class="hydrated"
                >
                  <input type="hidden"
                         class="aux-input"
                         name="undefined"
                         value
                  >
                </ino-checkbox>
              </span>
              <span class="mdc-deprecated-list-item__text">
                Text
              </span>
            </li>
          </ino-list-item>
        </ino-control-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-control-item Disabled smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-list two-lines="false">
      <ino-control-item activated="false"
                        checked="false"
                        disabled="true"
                        indeterminate="false"
                        role="checkbox"
                        secondary-text
                        selected="false"
                        text="Text"
                        trailing="false"
      >
      </ino-control-item>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-control-item Indeterminate smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-control-item activated="false"
                          checked="false"
                          disabled="false"
                          indeterminate="true"
                          role="checkbox"
                          secondary-text
                          selected="false"
                          text="Text"
                          trailing="false"
                          class="hydrated"
        >
          <ino-list-item class="hydrated">
            <span slot
                  hidden
            >
            </span>
            <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
                tabindex="-1"
            >
              <span class="mdc-deprecated-list-item__ripple">
              </span>
              <span class="mdc-deprecated-list-item__graphic"
                    role="presentation"
              >
                <ino-checkbox slot="leading"
                              class="hydrated"
                >
                  <input type="hidden"
                         class="aux-input"
                         name="undefined"
                         value
                  >
                </ino-checkbox>
              </span>
              <span class="mdc-deprecated-list-item__text">
                Text
              </span>
            </li>
          </ino-list-item>
        </ino-control-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-control-item Playground smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-control-item activated="false"
                          checked="false"
                          disabled="false"
                          indeterminate="false"
                          role="checkbox"
                          secondary-text
                          selected="false"
                          text="Text"
                          trailing="false"
                          class="hydrated"
        >
          <ino-list-item class="hydrated">
            <span slot
                  hidden
            >
            </span>
            <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
                tabindex="-1"
            >
              <span class="mdc-deprecated-list-item__ripple">
              </span>
              <span class="mdc-deprecated-list-item__graphic"
                    role="presentation"
              >
                <ino-checkbox slot="leading"
                              class="hydrated"
                >
                  <input type="hidden"
                         class="aux-input"
                         name="undefined"
                         value
                  >
                </ino-checkbox>
              </span>
              <span class="mdc-deprecated-list-item__text">
                Text
              </span>
            </li>
          </ino-list-item>
        </ino-control-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-control-item Roles smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-control-item activated="false"
                          checked="false"
                          disabled="false"
                          indeterminate="false"
                          role="radio"
                          secondary-text
                          selected="false"
                          text="Text"
                          trailing="false"
                          class="hydrated"
        >
          <ino-list-item class="hydrated">
            <span slot
                  hidden
            >
            </span>
            <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
                tabindex="-1"
            >
              <span class="mdc-deprecated-list-item__ripple">
              </span>
              <span class="mdc-deprecated-list-item__graphic"
                    role="presentation"
              >
                <ino-radio slot="leading"
                           class="hydrated"
                >
                  <input type="hidden"
                         class="aux-input"
                         name="undefined"
                         value
                  >
                </ino-radio>
              </span>
              <span class="mdc-deprecated-list-item__text">
                Text
              </span>
            </li>
          </ino-list-item>
        </ino-control-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-control-item SecondaryText smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-list two-lines="Some Secondary Text"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list mdc-deprecated-list--two-line">
        <ino-control-item activated="false"
                          checked="false"
                          disabled="false"
                          indeterminate="false"
                          role="checkbox"
                          secondary-text="Some Secondary Text"
                          selected="false"
                          text="Text"
                          trailing="false"
                          class="hydrated"
        >
          <ino-list-item class="hydrated">
            <span slot
                  hidden
            >
            </span>
            <li class="mdc-deprecated-list-item"
                tabindex="-1"
            >
              <span class="mdc-deprecated-list-item__ripple">
              </span>
              <span class="mdc-deprecated-list-item__graphic"
                    role="presentation"
              >
                <ino-checkbox slot="leading"
                              class="hydrated"
                >
                  <input type="hidden"
                         class="aux-input"
                         name="undefined"
                         value
                  >
                </ino-checkbox>
              </span>
              <span class="mdc-deprecated-list-item__text">
                <span class="mdc-deprecated-list-item__primary-text">
                  Text
                </span>
                <span class="mdc-deprecated-list-item__secondary-text">
                  Some Secondary Text
                </span>
              </span>
            </li>
          </ino-list-item>
        </ino-control-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-control-item Selected smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-control-item activated="false"
                          checked="false"
                          disabled="false"
                          indeterminate="false"
                          role="checkbox"
                          secondary-text
                          selected="true"
                          text="Text"
                          trailing="false"
                          class="hydrated"
        >
          <ino-list-item class="hydrated">
            <span slot
                  hidden
            >
            </span>
            <li class="mdc-deprecated-list-item mdc-deprecated-list-item--selected"
                tabindex="-1"
            >
              <span class="mdc-deprecated-list-item__ripple">
              </span>
              <span class="mdc-deprecated-list-item__graphic"
                    role="presentation"
              >
                <ino-checkbox slot="leading"
                              class="hydrated"
                >
                  <input type="hidden"
                         class="aux-input"
                         name="undefined"
                         value
                  >
                </ino-checkbox>
              </span>
              <span class="mdc-deprecated-list-item__text">
                Text
              </span>
            </li>
          </ino-list-item>
        </ino-control-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-control-item Trailing smoke-test 1`] = `
<div id="root-inner">
  <div class>
    <ino-list two-lines="false">
      <ino-control-item activated="false"
                        checked="false"
                        disabled="false"
                        indeterminate="false"
                        role="checkbox"
                        secondary-text
                        selected="false"
                        text="Text"
                        trailing="true"
      >
      </ino-control-item>
    </ino-list>
  </div>
</div>
`;
